<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_disease"
            style="@style/style_edit"
            android:hint="@string/insert_disease_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_medicine"
            style="@style/style_edit"
            android:hint="@string/medicine_name"
            android:inputType="textPersonName" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <EditText
                android:id="@+id/edit_details"
                style="@style/style_edit"
                android:hint="@string/insert_details"
                android:inputType="textMultiLine" />
        </ScrollView>

        <ImageView
            android:id="@+id/img_medicine_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher_round"

            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#265dc4"
            android:text="@string/update"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>
