<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Save_Information"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_disease"
                style="@style/style_edit"
                android:hint="@string/insert_disease_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_medicine"
                style="@style/style_edit"
                android:hint="@string/medicine_name"
                android:inputType="textPersonName" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/edit_details"
                    style="@style/style_edit"
                    android:hint="@string/insert_details"
                    android:inputType="textMultiLine" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linear1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                style="@style/style_btn"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:onClick="btn_save"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_show"
                style="@style/style_btn"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:onClick="btn_show"
                android:text="@string/show" />

            <ImageButton
                android:id="@+id/img_camera"
                style="@style/style_btn"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:onClick="capture_photo"
                app:srcCompat="@mipmap/camera" />

            <ImageButton
                android:id="@+id/img_device"
                style="@style/style_btn"
                android:layout_width="0dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:onClick="choose_photo"
                app:srcCompat="@mipmap/file" />

        </LinearLayout>


        <ImageView
            android:id="@+id/img_medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/main" />

    </RelativeLayout>

</ScrollView>
