<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        style="@style/style_row_layout"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            style="@style/style_row_txt"
            android:text="@string/name_disease"
            android:textColor="#ce1309" />

        <TextView
            android:id="@+id/txtDisease"
            style="@style/style_row_txt"
            android:textAlignment="center"
            android:textColor="#0e11d1" />

    </LinearLayout>


    <LinearLayout
        style="@style/style_row_layout"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            style="@style/style_row_txt"
            android:text="@string/name_medicine"
            android:textAlignment="center"
            android:textColor="#ce1309" />

        <TextView
            android:id="@+id/txtMedicine"
            style="@style/style_row_txt"
            android:textAlignment="center"
            android:textColor="#0e11d1" />

    </LinearLayout>

    <LinearLayout
        style="@style/style_row_layout"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            style="@style/style_row_txt"
            android:text="@string/details"
            android:textColor="#ce1309" />

        <TextView
            android:id="@+id/txtDetails"
            style="@style/style_row_txt"
            android:textAlignment="center"
            android:textColor="#0e11d1" />
    </LinearLayout>


</LinearLayout>